# yamlay

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/yamlay/: __init__.py  cli.py
